# tree-sitter-autohotkey

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.ahk  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: deploy-pages.yml  publish.yml  test.yml
bindings/c/: tree-sitter-autohotkey.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
queries/: highlights.scm
scripts/: bump-version.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: README.md
test/corpus/: assignments.txt  class-declarations.txt  comments.txt  continuation-operators.txt  continuation-sections.txt  control-flow.txt  directives.txt  exports.txt  expression-sequences.txt  expressions.txt  fat-arrow-functions.txt  function-calls.txt  function-expressions.txt  functions.txt  hotkeys.txt  hotstrings.txt  implicit-concatenation.txt  index-access.txt  literals.txt  multiline-strings.txt  operator-precedence.txt  operators.txt  optional-chaining.txt  realworld-default-keymap.txt  realworld-gui-bindctrl.txt  realworld-gui-example.txt  realworld-semver.txt  realworld-xaml-toast.txt  remaps.txt  struct-declarations.txt  ternary-expressions.txt  variables.txt
tests/assignment/: simple-assignment.ahk  string-literal-assignment.ahk
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+16 files in other folders)
