[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-autohotkey"
description = "Tree-sitter grammar for AHK v2"
version = "0.4.8"
keywords = ["incremental", "parsing", "tree-sitter", "autohotkey"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Tao Beloney" }]
requires-python = ">=3.10"
license.text = "Unlicense"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/holy-tao/tree-sitter-autohotkey"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
